--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section id="welcome">
 
-    <img src="kid.jpg">
+    <img src="saarim pic.png">
     
     <h1>My Favorite hobby is  <br><span id="myname">PLaying Cricket</span></h1>
         
